--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Learning how to test React Components with Enzyme and Jest",
   "main": "index.js",
   "dependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/runtime": "^7.9.6",
     "babel-jest": "^26.0.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "jest": "^26.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
