--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "enzyme-to-json": "^3.4.4"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
