--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/runtime": "^7.9.6",
     "babel-jest": "^26.0.1",
     "jest": "^26.0.1",
+    "jsdom": "^16.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
